Added a result Screen with a rating bar.

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -23,4 +23,5 @@
     <string name="radio52">476</string>
     <string name="radio53">388</string>
     <string name="submitButton">Checkear respuestas</string>
+    <string name="resultScreen">Gracias por jugar al Quizz! Esperamos verle pronto.</string>
 </resources>
