--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,6 +22,7 @@
     <string name="radio51">278</string>
     <string name="radio52">476</string>
     <string name="radio53">388</string>
+    <string name="resultScreen">Thanks for playing the quizz! Hope to see you soon.</string>
 
 </resources>
 
